# coinbasis

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
.portfolio/: architecture.md  qa.md  stack.md
.portfolio/og-previews/: og-home.html
docs/superpowers/plans/: 2026-06-03-coinbasis-implementation.md
docs/superpowers/specs/: 2026-06-03-coinbasis-library-design.md
examples/: cost_basis_methods.rs  gifts.rs  portfolio_stats.rs  quickstart.rs  tax_brackets.rs  tax_reports.rs  valuation.rs  wallet_transfers.rs
src/: engine.rs  error.rs  lib.rs  lot.rs  method.rs  portfolio.rs  report.rs  stats.rs  tax.rs  transaction.rs
tests/: headline.rs  properties.rs  serde_roundtrip.rs
